# JobHuntingAgents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml  render.yaml
.claude/agents/: pylon.md
agents/: contact.md  discovery.md  outreach.md  pylon.md  research.md  resume.md  skills.md  tools.md
config/: limits.yaml  settings.yaml
config/compliance/: default.yaml
docs/: app.html  how-it-works.html  index.html
docs/superpowers/plans/: 2026-03-28-redesign-and-deploy.md
docs/superpowers/specs/: 2026-03-28-redesign-and-deploy-design.md
knowledge/industries/: fintech.yaml  health_tech.yaml  sports_tech.yaml
knowledge/resume/: ds_ml.yaml
knowledge/templates/: cold.yaml  referral.yaml  warm.yaml
memory/: activeContext.md  patterns.md  progress.md
src/pylon/: __init__.py  compliance.py  config.py  excel.py  intent.py  knowledge.py  main.py  models.py  pipeline.py  router.py  store.py
src/pylon/agents/: __init__.py  base.py  contact.py  discovery.py  outreach.py  research.py  resume.py  skills.py  tools.py
src/pylon/core/: __init__.py  (+2 more)
tests/: test_actor_critic.py  test_api.py  test_claude_client.py  test_contact.py  test_discovery.py  test_dspy_fallback.py  test_dspy_metrics.py  test_dspy_modules.py  test_dspy_signatures.py  test_excel.py  test_gmail.py  test_intent.py  test_models.py  test_outreach.py  test_pipeline.py  test_research.py  test_resume.py  test_router.py  test_search.py  test_skills.py  test_store.py  test_swarm.py  test_tools.py
workflows/: actor-critic-workflow.md  pylon-router.md  swarm.md
(+16 files in other folders)
